Revert "Merge pull request #559 from clarat-org/fix/510-return-of-sticky-sidebar"
This reverts commit 46030fab259b3ef08d78510d378880a8b7da8612, reversing
changes made to 151bacb1a7d79bdcbb456b06a4a39c08cdb62304.

--- a/app/assets/stylesheets/base/_aside.scss
+++ b/app/assets/stylesheets/base/_aside.scss
@@ -3,12 +3,8 @@
 //  Common styles in aside and containers
 //
 // ---------------------------------------------------------------
-
 .aside-standard {
-  position: absolute;
-  top: 0;
-  transition: top 0.1s;
-  max-width: 330px;
+  transition: top 0.33s
 }
 
 .aside-standard__headline {
