Basic implementation of Tino's Design, sans shadows

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -9,6 +9,7 @@
 
 $brand_yellow: #F4B528;
 $brand_green: #8CBD86;
+$brand_green_alternative: #689860;
 $brand_brown: #41311A;
 $brand_beige: #f6eedc;
 $brand_white: #FFF;
