--- a/app/views/layouts/partials/_banner.html.slim
+++ b/app/views/layouts/partials/_banner.html.slim
@@ -1,8 +1,8 @@
 .Banner
   .Banner__text
-    => t '.teaser.text'
-    = '|'
-    =< t '.teaser.refugees'
+    /=> t '.teaser.text'
+    /= '|'
+    /=< t '.teaser.refugees'
   / Temporarily disabled t focus on refugees
   / a.Banner__link.beta_banner_open href="#" = t '.teaser.link'
 
