--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -14,6 +14,14 @@
     padding: 0 0 5px 0;
   }
 
+  .Banner {
+    .page-wrap & {
+      position: relative;
+      max-height: 10px;
+      overflow: hidden;
+    }
+  }
+
   .Logo {
     position: absolute;
     bottom: 32px;
@@ -29,7 +37,8 @@
 
   .Logo--start {
     position: relative;
-    top: auto;
+    top: 14px;
+    bottom: auto;
     margin-top: 25px;
     margin-left: 0;
     width: 180px;
@@ -38,23 +47,44 @@
     background-size: 180px 40px;
   }
 
+  .Logo--notstart {
+    bottom: auto;
+    top: 0;
+    z-index: 30;
+    width: 95px;
+    height: 38px;
+
+    body.family &,
+    body.refugees & {
+      background-size: 95px 38px;
+    }
+  }
+
   .Claim {
     margin-top: 90px;
   }
 
   .header-main {
-    position: fixed;
-    top: 0;
+    position: relative;
     right: 0;
     left: 0;
     z-index: 130;
     background: transparent;
+    min-height: 0;
 
     .template--pages-home & {
       position: static;
+      top: auto;
       right: auto;
       left: auto;
       z-index: auto;
+    }
+  }
+
+  .header-main__foreground {
+    body.refugees &,
+    body.family & {
+      background-position: center calc(100% - 40px);
     }
   }
 
@@ -71,6 +101,7 @@
 
   .Distributor--navigation {
     padding-bottom: 0;
+    width: 100%;
 
     &.is-enlarged {
       z-index: 20;
@@ -83,6 +114,14 @@
       width: 80%;
     }
 
+  }
+
+  .Distributor__search-form {
+    &.is-fixed {
+      position: fixed;
+      top: 0;
+      border-bottom: 1px solid $brand_white;
+    }
   }
 
   .JS-Geolocation__remove {
@@ -99,13 +138,22 @@
     position: relative;
     z-index: 30;
     display: block;
-    margin-left: 114px;
-    padding: 10px 0;
-    max-height: 85px;
+    padding: 10px 0 0 15px;
+    min-height: 58px;
+    max-height: 98px;
     width: auto;
+    border-top: 3px solid transparent;
+
+    body.family & {
+      border-color: $brand_core_family;
+    }
+
+    body.refugees & {
+      border-color: $brand_core_refugees;
+    }
+
 
     .Distributor.is-enlarged & {
-      margin-left: 15px;
 
       .tt-dropdown-menu {
         right: 1px; // override JS
@@ -114,6 +162,8 @@
 
     .template--pages-home & {
       max-height: none;
+      padding-top: 20px;
+      border-top: none;
 
       .input.string {
         padding-right: 0;
@@ -126,21 +176,13 @@
 
     #search_form_query,
     #search_form_search_location {
+      @include input-placeholder(rgba($brand_brown, .72), 400, 16px);
+      height: 35px;
+      font-size: 16px;
+      line-height: 35px;
       float: none;
       max-width: none;
-    }
-
-    #search_form_search_location {
-      padding-left: 40px;
-    }
-
-    #search_form_query,
-    #search_form_search_location {
       width: 100%;
-    }
-
-    #search_form_query {
-      padding-left: 53px;
     }
 
     #search_form_query,
@@ -152,12 +194,12 @@
       }
     }
 
-    #search_form_query,
     #search_form_search_location {
-      @include input-placeholder(rgba($brand_brown, .72), 400, 16px);
-      height: 35px;
-      font-size: 16px;
-      line-height: 35px;
+      padding-left: 40px;
+    }
+
+    #search_form_query {
+      padding-left: 53px;
     }
 
     .main-search__submit {
@@ -169,8 +211,7 @@
       background-size: 60%;
 
       &.is-enlarged {
-        top: 10px;
-        bottom: 0;
+        bottom: 10px;
         height: auto;
       }
 
@@ -220,11 +261,41 @@
     }
   }
 
-  .nav-welt__listitem {
+  .nav-welt--start {
+    left: 0;
+  }
+
+  .nav-welt--notstart {
+    float: right;
+    height: 31px;
+    margin-top: 21px;
+    margin-right: 7px;
+
+    li {
+      a:before {
+        display: none;
+      }
+    }
+
     a {
-      font-size: 14px;
-      padding-left: 24px;
-      padding-right: 0;
+      font-family: "roboto-bold", Roboto, sans-serif;
+    }
+  }
+
+  .nav-welt__listitem {
+    min-width: 0;
+
+    .template--pages-home & {
+      width: 50%;
+    }
+
+    .template--pages-home &:first-child a {
+      border-radius: 0;
+    }
+
+    a {
+      font-size: 15px;
+      padding: 0 12px;
     }
   }
 
@@ -238,7 +309,6 @@
     left: 0;
     z-index: 12;
   }
-
 
   .nav-sections {
     margin: 0;
@@ -254,7 +324,8 @@
     line-height: 45px; // closer to optical vertical middle
   }
 
-  span.tt-dropdown-menu {  // specificity, overriding JS
+  span.tt-dropdown-menu {
+    // specificity, overriding JS
     right: 0 !important; // overriding JS
   }
 
@@ -264,18 +335,17 @@
     padding: 0 15px;
   }
 
-  .content-main {
-    padding-top: 130px;
+  .main-search__advanced-filter--within-content-main {
+    margin: 0 -15px;
+  }
 
-    .has-enlarged-header & {
-      padding-top: 163px;
-    }
+  .content-main {
 
     .template--pages-home & {
       padding-top: 0;
     }
 
-    &.template--pages-about{
+    &.template--pages-about {
       padding-top: 100px;
     }
 
