--- a/app/views/pages/agb.html.slim
+++ b/app/views/pages/agb.html.slim
@@ -1,5 +1,5 @@
 - provide(:title, t('.title') )
-- cache 'agb_page' do
+- cache ['agb_page', I18n.t] do
 
   main.content-main.content-main--wide
     .wrapper-inner
