--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -1,5 +1,5 @@
 - provide(:title, t('.title'))
-- cache 'faq_page' do
+- cache ['faq_page', I18n.t] do
 
   / TODO: Put in real question an move them to the locales
   main.content-main.content-main--wide
