--- a/app/views/pages/not_found.html.slim
+++ b/app/views/pages/not_found.html.slim
@@ -1,5 +1,5 @@
 - provide(:title, t('.title'))
-- cache 'not_found_page' do
+- cache ['not_found_page', I18n.t] do
 
   / TODO: grab link text from locale
   main.content-main.content-main--wide
