--- a/app/views/pages/privacy.html.slim
+++ b/app/views/pages/privacy.html.slim
@@ -1,5 +1,5 @@
 - provide :title, t('.title')
-- cache 'privacy_page' do
+- cache ['privacy_page', I18n.t] do
 
   main.content-main.content-main--wide
     .wrapper-inner
