--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@
 @import "modules/flash-message";
 @import "modules/banner";
 @import "modules/ajax";
+@import "modules/automated-translation";
 @import "modules/js";
 @import "modules/js-geolocation";
 @import "modules/js-cookie-warning";
