--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -30,9 +30,9 @@ footer.footer-main
             li.nav-site__listitem
               - I18n.available_locales.each do |locale|
                 =< link_to image_tag(image_path("flags/#{locale}.svg"), style: 'width: 15px; height: 10px;'),
-                           url_for(locale: locale.to_s, only_path: true)
+                           locale: locale.to_s
 
-        - cache "#{current_section}_footer_links_4" do
+        - cache "#{current_section}_footer_links_4_#{I18n.locale}" do
 
           nav.nav-site
             ul.nav-site__list
@@ -44,7 +44,7 @@ footer.footer-main
                 = link_to t('.contact'),
                           new_contact_path(section: current_section)
 
-  - cache "#{current_section}_footer_links_3" do
+  - cache "#{current_section}_footer_links_3_#{I18n.locale}" do
 
     section.footer-main__secondrow
       .wrapper-inner
