--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -15,7 +15,8 @@
       section.section-content.section-content--who
         h3.section-content__title = t '.who'
         .section-content__body.section-content--what
-          p== @organization.description_html
+          == translation_block @organization.translation_automated? do
+            == @organization.description
       - if @organization.offers.approved.any?
         section.section-content.section-content--alloffers
           h3.section-content__title = t '.offers_all'
@@ -30,7 +31,7 @@
     .section-wrapper-minor
 
       - if location
-        - cache [location, 'organization_show_text'] do
+        - cache [location, 'organization_show_text', I18n.locale] do
 
           section.section-content.section-content--where
             h3.section-content__title = t '.where'
