--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,9 @@ html class='no-js' lang=I18n.locale
     - meta_description = yield(:meta_description)
     - if meta_description
       meta name='description' content=meta_description
+
+    = yield(:additional_meta_tags)
+
     - canonical_url = content_for(:canonical_url) || default_canonical_url
     link rel='canonical' href=canonical_url
 
