for family/refugees split - switch claim based on section

--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -1,12 +1,12 @@
-- cache 'start_header' do
+- cache ['start_header', @current_section] do
 
   header.header-main.header-main--wide
     .header-main__foreground.wrapper-inner
       h1.Logo.Logo--start = link_to 'clarat.org', '/'
 
       .Claim
-        h2.Claim__firstrow = t '.claim.first_row'
-        h3.Claim__secondrow = t '.claim.second_row'
+        h2.Claim__firstrow = t '.claim.main'
+        h3.Claim__secondrow = t ".claim.#{@current_section}"
 
       nav.nav-welt.nav-welt--start
         ul.nav-welt__list
