--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,3 +66,4 @@
 @import "vendor/places-autocomplete_override";
 @import "vendor/formtastic";
 @import "vendor/shariff_override";
+@import "vendor/freshdesk";
