fix style of last commit - replace instance variables with local vars in partial

--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -1,4 +1,4 @@
-- cache ['start_header', @current_section] do
+- cache ['start_header', current_section] do
 
   header.header-main.header-main--wide
     .header-main__foreground.wrapper-inner
@@ -6,7 +6,7 @@
 
       .Claim
         h2.Claim__firstrow = t '.claim.main'
-        h3.Claim__secondrow = t ".claim.#{@current_section}"
+        h3.Claim__secondrow = t ".claim.#{current_section}"
 
       nav.nav-welt.nav-welt--start
         ul.nav-welt__list
