Implementation based on newer develop branch state

--- a/app/assets/stylesheets/base/_aside.scss
+++ b/app/assets/stylesheets/base/_aside.scss
@@ -4,7 +4,10 @@
 //
 // ---------------------------------------------------------------
 .aside-standard {
-  transition: top 0.33s
+  position: absolute;
+  max-width: 345px;
+  top: 0;
+  transition: top 0.1s;
 }
 
 .aside-standard__headline {
