--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -36,6 +36,13 @@
     padding: 0;
     width: 100%;
   }
+
+  &.content-main--offers-index {
+    position: relative;
+    width: 100%;
+    float: none;
+    padding-left: calc(31% + 2px);
+  }
 }
 
 .aside-standard {
@@ -46,7 +53,9 @@
 .content-main,
 .Categories {
   .template--offers-index & {
-    float: right;
+    display: block;
+    float: none;
+    width: 100%;
   }
 }
 
