--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -32,7 +32,7 @@
 
   &.content-main--wide {
     float: none;
-    margin: 0 auto;
+    margin: 25px auto 0;
     padding: 0;
     width: 100%;
   }
