Basic, yet widely unfinished first implementation of Tinos design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,8 @@
 @import "navigation/nav-site";
 @import "navigation/nav-legal";
 @import "navigation/nav-welt";
+@import "navigation/nav-lang";
+
 @import "vendor/pagination";
 
 @import "mediaqueries/config";
