--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -485,6 +485,10 @@
     }
   }
 
+  .nav-lang__title {
+    font-size: 13px;
+  }
+
   // Content ######################################
 
   .page-wrap:after {
