--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -100,6 +100,10 @@
     }
   }
 
+  .nav-lang__title {
+    margin-left: 10px;
+  }
+
   // Content ######################################
 
   .section-start__headline {
