getting rid of the Google API SensorNotRequired JS warning

--- a/app/views/layouts/partials/_general_assets.html.slim
+++ b/app/views/layouts/partials/_general_assets.html.slim
@@ -12,7 +12,7 @@ javascript:
       .jsonly { display: none; }
 
 = javascript_include_tag 'https://maps.googleapis.com/maps/api/js?libraries='\
-                         'places&language=de&sensor=false&v=3.exp'\
+                         'places&language=de&v=3.exp'\
                          '&callback=Clarat.GMaps.initialize',
                          cache: 'google_maps_apiv3'
 
