For #595, hotfixing overlapping

--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -146,6 +146,11 @@
     width: auto;
   }
 
+  .aside-standard {
+    position: absolute !important; // Override JS
+    max-width: 27%;
+  }
+
   .content-main {
     padding-bottom: 0;
   }
