--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -509,6 +509,11 @@
     margin-bottom: 0;
   }
 
+  .aside-standard {
+    position: relative !important; // Override JS
+    max-width: 100%;
+  }
+
   .content-main,
   .Categories {
     .template--offers-index & {
