Basic implementation of email filtered offer index view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@
 @import "modules/js-modal";
 @import "modules/table";
 @import "modules/noscript";
-
+@import "modules/emailinfo";
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
 @import "modules/sections/section-offer";
