--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -77,6 +77,19 @@
   height: 196px;
 }
 
+.template--emails-offers_index {
+
+
+  .section-wrapper-minor {
+    float: left;
+  }
+
+  .section-wrapper-major {
+    float: right;
+    margin: 0 0 0 2.5%;
+  }
+}
+
 
 // Silent layout helper classes
 
