--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -215,6 +215,12 @@
     width: 50%;
   }
 
+  .section-wrapper-major {
+    .template--emails-offers_index & {
+      width: 100%;
+    }
+  }
+
 
   // Footer ######################################
 
