--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -25,13 +25,16 @@
             == translation_block @offer.translation_automated? do
               == @offer.description
 
-        / What to do next?
-        section.section-content.section-content--nextsteps
-          h3.section-content__title
-            = t '.next_steps'
-          .section-content__body
+      / What to do next?
+      section.section-content.section-content--nextsteps
+        h3.section-content__title
+          = t '.next_steps'
+        .section-content__body
+          - if @offer.next_steps.in_current_locale.any?
+            = @offer.next_steps_for_current_locale
+          - else
             == translation_block @offer.translation_automated? do
-              == @offer.next_steps
+              == @offer.old_next_steps
 
       / Who is offering this service?
       = render 'offers/show/who_section', offer: @offer
