Basic implementation of welcome tooltips, but texts and possibly final styling needed

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -645,4 +645,9 @@
   .shariff-button.whatsapp {
     display: block !important;
   }
+
+  .template--offers-index #qtip-1 {
+    top: 148px !important;
+    left: 20px !important;
+  }
 }
