--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -42,9 +42,8 @@
           ul.section-content__langlist
             - @offer.language_filters.pluck(:identifier).each do |language|
               li
-                => t ".currentlocale.#{language}"
-                | &#150
-                =< t ".original.#{language}"
+                => t ".current_and_original_locale.#{language}"
+
         button.section-content__toggle[
           data-expanded-label=t('.lang_list_toggle.less')
           data-collapsed-label=t('.lang_list_toggle.more')
