fix: extended hiding of who_section block

--- a/app/views/offers/show/_who_section.html.slim
+++ b/app/views/offers/show/_who_section.html.slim
@@ -1,4 +1,4 @@
-- if offer.contact_people.any?
+- if offer.visible_contact_people?
   section.section-content
     h3.section-content__title = t '.heading'
     .section-content__body
