fix for #620: check offer.location instead of organ.location and update clarat_base

--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -24,7 +24,7 @@
               - @organization.offers.approved.order('name ASC').each do |offer|
                 li.Listing-offers__listitem
                   = link_to offer.name, offer_path(id: offer)
-                - if location && location.visible
+                - if offer.location && offer.location.visible
                   .Listing-offers__address
                     = offer.location_address
 
