Prepare CSS for seventh icon in refugees

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -470,6 +470,9 @@
     margin-bottom: 20px;
   }
 
+  .nav-sections__list {
+    display: block; // no need for flexbox anymore
+  }
 
   .nav-sections__listitem {
     float: none;
