--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -119,15 +119,26 @@
 
   .nav-sections {
     padding: 30px 0;
-    width: 100%;
-    max-width: 100%;
+    margin-right: 0;
     background-size: contain; // in order not to cut/stretch pictograms
+
+    &,
+    body.refugees & {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
+
+  .nav-sections__list {
+    display: flex;
+    justify-content: center;
   }
 
   .nav-sections__listitem {
     height: auto;
     width: 14.5%;
-    margin: 0 1%;
+    margin: 0;
+    background-size: contain;
 
     a {
       position: relative;
