for #642 - home page title for refugees

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,4 +1,4 @@
-- provide(:title, t('.title'))
+- provide(:title, t(".title.#{@current_section}"))
 - cache ['home_page', I18n.t] do
 
   main.content-main.content-main--wide
