for #642 - home page title for refugees

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,5 +1,5 @@
-- provide(:title, t('.title'))
-- cache 'home_page' do
+- provide(:title, t(".title.#{@current_section}"))
+- cache ['home_page', I18n.t] do
 
   main.content-main.content-main--wide
     .wrapper-inner
